--- a/Complete.ipynb
+++ b/Complete.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "    def body(v,t,current_x,current_u):\n",
     "        #h1=(t/tf_tau1 - 1)*tf_lamb*tf_c\n",
-    "        h1=tf.cond(t_true,lambda:(t/tf_tau1 - 1)*tf_lamb*tf_c,lambda:  - tf_tau2*tf_lamb*tf_c - tf_lamb*tf_c )\n",
+    "        h1=tf.cond(t_true,lambda:(t/tf_tau1 - 1)*tf_lamb*tf_c,lambda:  - tf_tau2*tf_lamb*tf_c  )\n",
     "        y=tf.matmul(tf_W,current_x) \n",
     "        h2=-tf_eta*(y-tf_theta)\n",
     "        next_u=current_u + h1+h2\n",
